--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -8,13 +8,20 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-6">
-      <ul>
-      <%= @cocktails.each do |cocktail| %>
-        <li><%= link_to cocktail.name, cocktail_path(cocktail) %></li>
-      <% end %>
-      </ul>
+      <% @cocktails.each do |cocktail| %>
+      <div class="card" style="width: 18rem;">
+        <div class="card-img-top" style="height: 300px; background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), 
+        url('<%= cl_image_path cocktail.photo.key, height: 300, width: 400, crop: :fill %>')"></div>
+      <div class="card-body">
+        <h5 class="card-title"><%= cocktail.name %></h5>
+        <p class="card-text"></p>
+        <p class="btn btn-primary"><%= link_to "Learn more", cocktail_path(cocktail) %></p>
+      </div>
+     </div>
+    <% end %>
 
       <%= link_to 'Add a new cocktail', new_cocktail_path  %>
     </div>
   </div>
 </div>
+
