--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,9 +14,8 @@
   </head>
 
   <body>
-    <div class="content">
-      <%= render 'shared/navbar' %>
+  <%= link_to "home", cocktails_path%>
+        <%# <%= render 'shared/navbar' %> 
       <%= yield %>
-    </div>
   </body>
 </html>
