--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -7,4 +7,9 @@ $yellow: #FFC65A;
 $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
-$light-gray: #F4F4F4;
+$white: white;
+
+$main: #ebebeb;
+$secondary: #221f3b;
+$pop: #6f4a8e;
+$light-gray: #ebebeb;
