--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,9 +1,9 @@
 // Import Google fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito:400,700|Work+Sans:400,700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Lato&family=Red+Rose&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alata&display=swap');
 // Define fonts for body and headers
-$body-font: "Work Sans", "Helvetica", "sans-serif";
-$headers-font: "Nunito", "Helvetica", "sans-serif";
+$body-font: "Lato", "Helvetica", "sans-serif";
+$headers-font: "Alata", "Helvetica", "cursive";
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
