--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,26 +1,22 @@
-<div class="home-banner">
+<div class="container">
+<%# <div class="home-banner">
      <h1>Mister Cocktail</h1>
   <p>
     <span id="banner-typed-text"></span>
   </p>
-</div>
-
-<div class="container">
-  <div class="row justify-content-center">
-    <div class="col-6">
-      <% @cocktails.each do |cocktail| %>
-      <div class="card" style="width: 18rem;">
-        <div class="card-img-top" style="height: 300px; background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), 
-        url('<%= cl_image_path cocktail.photo.key, height: 300, width: 400, crop: :fill %>')"></div>
+</div> %>
+<div class="card-container">
+  <% @cocktails.each do |cocktail| %>
+    <div class="card" style="width: 18rem;">
+    <img class="card-img-top" src="https://source.unsplash.com/400x300/?cocktail,drinks" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title"><%= cocktail.name %></h5>
         <p class="card-text"></p>
-        <p class="btn btn-primary"><%= link_to "Learn more", cocktail_path(cocktail) %></p>
+        <p class="btn btn-success"><%= link_to "Learn more", cocktail_path(cocktail) %></p>
       </div>
      </div>
-    <% end %>
-
-      <%= link_to 'Add a new cocktail', new_cocktail_path  %>
+  <% end %>
+  </div>
     </div>
   </div>
 </div>
